--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,13 @@
         <item>Post Graduation</item>
         <item>Others</item>
     </string-array>
+    <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_score">ScoreActivity</string>
     <string name="title_activity_review">ReviewActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="option_image">Option Image</string>
+    <string name="close_text">Close</string>
 
 </resources>
