--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,11 @@
         <item>Section3</item>
         <item>Section4</item>
     </string-array>
+
+    <string-array name="actionBarTabs">
+        <item>Practice Test</item>
+        <item>FlashCard</item>
+    </string-array>
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_score">ScoreActivity</string>
     <string name="title_activity_review">ReviewActivity</string>
