--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="reglabel">Register Here</string>
     <string name="paperdashlabel">PaperWise Performance</string>
     <string name="testdashlabel">TestWise Performance</string>
+    <string name="enrolllabel">Enroll Request</string>
 
     <string-array name="qualifications">
         <item>Select</item>
