--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="paperdashlabel">PaperWise Performance</string>
     <string name="testdashlabel">TestWise Performance</string>
     <string name="enrolllabel">Enroll Request</string>
+    <string name="ptestslabel">Practise Tests</string>
+    <string name="atestslabel">Assessment Tests</string>
+    <string name="dashlabel">Tests DashBoard</string>
     <string name="courselabel">Course List</string>
     <string name="paperlabel">Papers List</string>
 
